--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -76,13 +76,14 @@
         android:id="@+id/textNoFolder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ops no folder yet"
+        android:text="Oops! no folder yet"
         android:textColor="#62818F"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
 
 
