--- a/app/src/main/res/layout/activity_sync_powell.xml
+++ b/app/src/main/res/layout/activity_sync_powell.xml
@@ -395,7 +395,7 @@
                 android:gravity="start|center"
                 android:maxLines="1"
                 android:paddingStart="26dp"
-                android:text="Download on files at set Intervals"
+                android:text="Download on change"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
