--- a/app/src/main/res/layout/custom_continue_download_layout.xml
+++ b/app/src/main/res/layout/custom_continue_download_layout.xml
@@ -84,7 +84,7 @@
             android:text="Download Zip"
             android:textColor="@color/deep_blue"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/imgCloseDialog"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
