--- a/app/src/main/res/layout/custom_forget_password_email_layout.xml
+++ b/app/src/main/res/layout/custom_forget_password_email_layout.xml
@@ -53,7 +53,7 @@
             android:elegantTextHeight="true"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:text="Input registered email"
+            android:text="Registered email"
             android:textColor="@color/black"
             android:textSize="13sp"
             app:layout_constraintEnd_toStartOf="@+id/imgCloseDialogForegetPassword"
@@ -61,23 +61,47 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <EditText
+
+        <TextView
             android:id="@+id/eitTextEnterPassword"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
-            android:hint="Enter email"
-            android:inputType="textEmailAddress"
             android:paddingStart="5dp"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textColorHint="#595555"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textForGetPassword" />
+
+
+
+
+
+        <!--
+                <EditText
+                    android:id="@+id/eitTextEnterPassword"
+                    android:layout_width="0dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@android:color/transparent"
+                    android:hint="Enter email"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="5dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#595555"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textForGetPassword" />
+        -->
 
         <View
             android:id="@+id/divider2"
@@ -89,16 +113,6 @@
             app:layout_constraintTop_toBottomOf="@+id/eitTextEnterPassword" />
 
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/textContinuPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textForGetPassword" />
 
 
         <TextView
