--- a/app/src/main/res/layout/webactivity_layout.xml
+++ b/app/src/main/res/layout/webactivity_layout.xml
@@ -226,7 +226,7 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textStatusProcess"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -243,8 +243,8 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textLocation"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/countDownTime"
+            app:layout_constraintTop_toTopOf="@+id/countDownTime" />
 
         <TextView
             android:id="@+id/countDownTime"
@@ -256,8 +256,7 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/textSynIntervals"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textStatusProcess"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textSynIntervals"
             app:layout_constraintTop_toTopOf="@+id/textSynIntervals" />
@@ -272,89 +271,15 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/textSyncMode"
             app:layout_constraintEnd_toStartOf="@+id/countDownTime"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textSyncMode"
             app:layout_constraintTop_toTopOf="@+id/textSyncMode" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
-<!--
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_crash"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="32dp"
-        android:alpha="0.7"
-        android:background="@color/deep_blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <ImageView
-            android:id="@+id/imageCrossClose"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?selectableItemBackground"
-            android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_close_24"
-            app:tint="@color/white" />
-
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="We apologize for the inconvenience. Please close the app."
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toStartOf="@+id/imageCrossClose"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textSend"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="SEND"
-            android:textColor="@color/white"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-        <TextView
-            android:id="@+id/textCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="CANCEL"
-
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/textSend"
-            app:layout_constraintEnd_toStartOf="@+id/textSend"
-            app:layout_constraintTop_toTopOf="@+id/textSend" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
--->
 
 
 
