--- a/app/src/main/res/layout/custom_email_sucess_layout.xml
+++ b/app/src/main/res/layout/custom_email_sucess_layout.xml
@@ -51,7 +51,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/textBodyMessage" />
 
         <TextView
             android:id="@+id/textSucessful"
@@ -77,7 +77,7 @@
             app:tint="@color/deep_blue" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textBodyMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -87,7 +87,7 @@
             android:text="Kindly check email to view password"
             android:textColor="@color/deep_blue"
             android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@+id/textContinuPassword2"
+            app:layout_constraintBottom_toTopOf="@+id/textEmailSendOkayBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imagSucessful" />
