--- a/app/src/main/res/layout/progress_dialog_layout.xml
+++ b/app/src/main/res/layout/progress_dialog_layout.xml
@@ -45,13 +45,13 @@
 
         <ImageView
             android:id="@+id/imagSucessful"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_download_24"
+            android:background="@drawable/ic_download_24"
             app:tint="@color/deep_blue" />
 
 
