--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -145,5 +145,12 @@
     </style>
 
 
+    <!--  DIALOG APPEARANCE THEME  -->
+    <style name="PauseDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/scale_in</item>
+        <item name="android:windowExitAnimation">@anim/scale_out</item>
+    </style>
+
+
 
 </resources>
