--- a/app/src/main/res/layout/activity_test_screen.xml
+++ b/app/src/main/res/layout/activity_test_screen.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/deep_blue"
     tools:context=".additionalSettings.TestScreenActivity">
 
+    <!--
 
     <TextView
         android:id="@+id/textDisplayText"
@@ -23,11 +25,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView20"
         app:layout_constraintTop_toTopOf="@+id/imageView20" />
-
-
-
-
-
 
     <TextView
         android:id="@+id/textSendMySms"
@@ -94,6 +91,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDisplayText" />
+-->
+
 
 
 
