--- a/app/src/main/res/layout/webactivity_layout.xml
+++ b/app/src/main/res/layout/webactivity_layout.xml
@@ -8,12 +8,9 @@
     android:animateLayoutChanges="true"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-
     android:gravity="center"
-
     tools:context=".WebActivity"
     android:orientation="vertical">
-
 
 
 
@@ -178,148 +175,238 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="70dp"
         android:background="@drawable/round_bg"
-        ads:layout_constraintBottom_toTopOf="@+id/bottom_server_layout"
+        ads:layout_constraintBottom_toBottomOf="@+id/drawer_layout"
         ads:layout_constraintEnd_toEndOf="parent" />
-
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_server_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="50dp"
+        android:layout_height="45dp"
+        android:layout_gravity="top|center"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:alpha="0.6"
         android:background="#171616"
+        android:clickable="false"
         android:fitsSystemWindows="true"
+        android:focusable="false"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="15dp"
         android:visibility="visible"
-        ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
-        ads:layout_constraintStart_toStartOf="parent">
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toTopOf="@+id/drawer_layout">
 
-
-
-
-        <TextView
-            android:id="@+id/textSyncMode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="SM: --"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textSynIntervals"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textLocation" />
-
-        <TextView
-            android:id="@+id/textLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="LN : --"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textDownladByes"
-            app:layout_constraintStart_toEndOf="@+id/imageWiFiOFF"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textStatusProcess"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="PR: --"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
+        <ProgressBar
+            android:id="@+id/progressBarPref"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:progressDrawable="@drawable/style_horizontal_bar"
+            android:visibility="gone"
+            ads:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/countDownTime"
-            app:layout_constraintTop_toTopOf="@+id/countDownTime" />
-
-        <TextView
-            android:id="@+id/countDownTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="CD: --"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textStatusProcess"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textSynIntervals"
-            app:layout_constraintTop_toTopOf="@+id/textSynIntervals" />
-
-        <TextView
-            android:id="@+id/textSynIntervals"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="ST: --"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/countDownTime"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textSyncMode"
-            app:layout_constraintTop_toTopOf="@+id/textSyncMode" />
-
-        <TextView
-            android:id="@+id/textDownladByes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:elegantTextHeight="true"
-            android:gravity="center"
-            android:text="0%"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:visibility="invisible"
-            tools:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/imageWiFiOFF"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="16dp"
+            android:id="@+id/scroolTostart"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
             android:padding="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_wifi_no_internet"
-            app:tint="@android:color/holo_green_light" />
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?selectableItemBackground"
+            ads:layout_constraintBottom_toBottomOf="parent"
+            ads:layout_constraintStart_toStartOf="parent"
+            ads:layout_constraintTop_toTopOf="parent"
+            ads:tint="@color/white"
+            app:srcCompat="@drawable/ic_back_slide_arrow" />
 
 
         <ImageView
-            android:id="@+id/imageWiFiOn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="16dp"
+            android:id="@+id/scroolToEnd"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
             android:padding="5dp"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_bad_wifi"
-            app:tint="@android:color/holo_red_light" />
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?selectableItemBackground"
+            ads:layout_constraintBottom_toBottomOf="parent"
+            ads:layout_constraintEnd_toEndOf="parent"
+            ads:layout_constraintTop_toTopOf="parent"
+            ads:tint="@color/white"
+            app:srcCompat="@drawable/ic_slide_to_end_arrow" />
 
 
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            ads:layout_constraintEnd_toStartOf="@+id/scroolToEnd"
+            ads:layout_constraintStart_toEndOf="@+id/scroolTostart"
+            ads:layout_constraintTop_toBottomOf="@+id/progressBarPref">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+
+                    <ImageView
+                        android:id="@+id/imageWiFiOFF"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="4dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_wifi_no_internet"
+                        app:tint="@android:color/holo_green_light" />
+
+                    <ImageView
+                        android:id="@+id/imageWiFiOn"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="4dp"
+                        android:visibility="invisible"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_bad_wifi"
+                        app:tint="@android:color/holo_red_light" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                <TextView
+                    android:id="@+id/countDownTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="center"
+                    android:text="CD: --"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/textSynIntervals"
+                    app:layout_constraintStart_toEndOf="@+id/textSynIntervals"
+                    app:layout_constraintTop_toTopOf="@+id/textSynIntervals" />
+
+
+                <TextView
+                    android:id="@+id/textStatusProcess"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="center"
+                    android:text="PR: --"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/countDownTime"
+                    app:layout_constraintStart_toEndOf="@+id/countDownTime"
+                    app:layout_constraintTop_toTopOf="@+id/countDownTime" />
+
+
+                <TextView
+                    android:id="@+id/textDownladByes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="center"
+                    android:text="0%"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@+id/textLocation"
+                    app:layout_constraintStart_toEndOf="@+id/textLocation"
+                    app:layout_constraintTop_toTopOf="@+id/textLocation"
+                    tools:visibility="visible" />
+
+
+                <TextView
+                    android:id="@+id/textSynIntervals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="center"
+                    android:text="ST: --"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
+                    app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
+                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />
+
+
+                <TextView
+                    android:id="@+id/textSyncMode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:text="SM: --"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/textSynIntervals"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textLocation" />
+
+
+                <TextView
+                    android:id="@+id/textLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="center"
+                    android:text="LN : --"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/textStatusProcess"
+                    app:layout_constraintStart_toEndOf="@+id/textStatusProcess"
+                    app:layout_constraintTop_toTopOf="@+id/textStatusProcess" />
+
+
+            </LinearLayout>
+
+
+        </HorizontalScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
