--- a/app/src/main/res/layout/activity_tv_or_app_mode.xml
+++ b/app/src/main/res/layout/activity_tv_or_app_mode.xml
@@ -28,9 +28,9 @@
                 style="@style/cardDesignBuyGift222"
                 android:layout_width="0dp"
                 android:layout_height="45dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="50dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -49,9 +49,9 @@
                 style="@style/cardDesignBuyGift"
                 android:layout_width="0dp"
                 android:layout_height="45dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="50dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="sans-serif-medium"
@@ -62,17 +62,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextLicenseKey" />
 
 
             <TextView
                 android:id="@+id/textView2"
-                style="@style/textColorStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:text="Welcome to Syn2App"
+                android:text="Welcome to Sync2App"
                 android:textSize="19sp"
+                android:textColor="#373535"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -82,10 +82,11 @@
                 android:id="@+id/imageView2"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:layout_marginTop="120dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintVertical_bias="0.13999999"
                 app:srcCompat="@drawable/img_logo_icon" />
 
             <TextView
@@ -93,26 +94,127 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Syn2App"
-                android:textColor="@color/black"
+                android:text="Sync2App"
+                android:textColor="#373535"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2"
                 app:layout_constraintStart_toStartOf="@+id/imageView2"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
+
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/textPartnerUrlLunch"
                 style="@style/textColorStyle"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
-                android:gravity="center"
-                android:text="Kindly configure your App"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="16dp"
+                android:elegantTextHeight="true"
+                android:gravity="center|start"
+                android:maxLines="1"
+                android:paddingStart="10dp"
+                android:text="Use Custom Domain"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toStartOf="@+id/imgUserMasterDomain_OR_Custom"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/imgUserMasterDomain_OR_Custom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="50dp"
+                android:alpha="1"
+                app:layout_constraintBottom_toBottomOf="@+id/textPartnerUrlLunch"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textPartnerUrlLunch" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayoutSlectDomain"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/round_edit_text_design"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?selectableItemBackground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textPartnerUrlLunch">
+
+
+                <TextView
+                    android:id="@+id/texturlsSavedDownload"
+                    style="@style/textColorStyleSyncMangerPlus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:elegantTextHeight="true"
+                    android:gravity="start|center"
+                    android:maxLines="1"
+                    android:text="Select Domain"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/imagSpannerSavedDownload"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <ImageView
+                    android:id="@+id/imagSpannerSavedDownload"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/ic_drop_down_24"
+                    android:padding="15dp"
+                    android:textColor="@android:color/transparent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/light_gray" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <EditText
+                android:id="@+id/editTextUserID"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/round_edit_text_design"
+                android:gravity="center"
+                android:hint="Company / User ID"
+                android:paddingStart="15dp"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSlectDomain"
+                tools:ignore="RtlSymmetry" />
+
+            <EditText
+                android:id="@+id/editTextLicenseKey"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="50dp"
+                android:background="@drawable/round_edit_text_design"
+                android:gravity="center"
+                android:hint="License Key"
+                android:paddingStart="15dp"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextUserID"
+                tools:ignore="RtlSymmetry" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
