--- a/app/src/main/res/layout/custom_api_hard_coded_layout.xml
+++ b/app/src/main/res/layout/custom_api_hard_coded_layout.xml
@@ -61,7 +61,7 @@
                 android:layout_marginEnd="8dp"
                 android:gravity="center|start"
                 android:maxLines="1"
-                android:text="Select Parther Url"
+                android:text="Select Partner Url"
                 android:textColor="@color/deep_blue"
                 android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +108,7 @@
             android:text="CP-Cloud App Server"
             android:clickable="true"
             android:focusable="true"
+            android:padding="5dp"
             android:foreground="?selectableItemBackground"
             android:textColor="@color/deep_blue"
             android:textSize="14sp"
@@ -120,7 +121,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
@@ -128,6 +129,7 @@
             android:focusable="true"
             android:foreground="?selectableItemBackground"
             android:gravity="start|center"
+            android:padding="5dp"
             android:text="API-Cloud App Server"
             android:textColor="@color/deep_blue"
             android:textSize="14sp"
