--- a/app/src/main/res/layout/custom_confirm_exit_dialog.xml
+++ b/app/src/main/res/layout/custom_confirm_exit_dialog.xml
@@ -188,7 +188,7 @@
             app:layout_constraintEnd_toStartOf="@+id/textLaunchOffline"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textLaunchOnlineJson" />
+            app:layout_constraintTop_toBottomOf="@+id/textReSync" />
 
         <TextView
             android:id="@+id/textLaunchOffline"
@@ -232,33 +232,28 @@
             app:layout_constraintTop_toBottomOf="@+id/textHome" />
 
 
-
         <TextView
-            android:id="@+id/textLaunchOnlineJson"
+            android:id="@+id/textLogoutButton"
             style="@style/cardDesignBuyGift222"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
             android:clickable="true"
             android:focusable="true"
-            android:visibility="gone"
-            tools:visibility="visible"
             android:foreground="?android:selectableItemBackground"
-            android:gravity="center_horizontal"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:text="Launch Online JSON"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="Logout"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textReSync" />
-
-
-
-
-
+            app:layout_constraintTop_toBottomOf="@+id/textCanCellDialog"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/textAppAdmin"
@@ -330,7 +325,6 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginBottom="16dp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:selectableItemBackground"
@@ -339,7 +333,6 @@
             android:paddingBottom="8dp"
             android:text="Cancel"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textExit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
