--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="deep_blue_light">#21485A</color>
     <color name="light_gray">#676A6C</color>
     <color name="light_blue_wash">#6799A5</color>
+    <color name="light_blue_wash_lithter">#BBD0E4</color>
     <color name="dark_light_gray">#302E2E</color>
     <color name="tool_bar_color">#F4F1F4</color>
 
