--- a/app/src/main/res/layout/time_picker_dialog.xml
+++ b/app/src/main/res/layout/time_picker_dialog.xml
@@ -1,59 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/consMainAlert_dn"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/picker_round_back">
+    android:layout_gravity="center|top"
+    android:orientation="vertical"
+    android:padding="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Pick Time"
-        android:textSize="16sp"
-        android:textColor="@color/deep_blue"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"/>
 
-    <TimePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:timePickerMode="spinner"
-        android:layout_margin="10dp"
-        android:layout_centerInParent="true"
-        android:numbersTextColor="@color/white"
-        android:id="@+id/timePicker"/>
-
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/cardDesignAccountNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/timePicker"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="end">
+        android:layout_gravity="center|top"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Pick Time"
+            android:textColor="@color/deep_blue"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="16dp"
+            android:numbersTextColor="@color/white"
+            android:timePickerMode="spinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="Cancel"
-            android:textSize="13sp"
-            android:textColor="@color/white"
             android:id="@+id/cancelBtn"
-            android:layout_marginEnd="10dp"/>
-
-        <Button
+            style="@style/constrain_gray_outline_stroke"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:background="@color/deep_blue"
-            android:text="Set"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Cancel"
+            android:textColor="@color/deep_blue"
             android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/setBtn"
+            app:layout_constraintEnd_toStartOf="@+id/setBtn"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/setBtn" />
+
+        <Button
+            android:id="@+id/setBtn"
+            style="@style/cardDesignBuyGift"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            android:text="Set"
             android:textColor="@color/white"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:id="@+id/setBtn"/>
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/timePicker"
+            app:layout_constraintTop_toBottomOf="@+id/timePicker" />
 
-    </LinearLayout>
 
-</RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
