--- a/app/src/main/res/layout/activity_app_admin.xml
+++ b/app/src/main/res/layout/activity_app_admin.xml
@@ -6,6 +6,7 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.AdditionalSettingsActivity">
 
 
@@ -38,7 +39,7 @@
             android:id="@+id/textTitle"
             style="@style/Theme.RemoteWebViewLight"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
