--- a/app/src/main/res/layout/activity_downlod_pagger.xml
+++ b/app/src/main/res/layout/activity_downlod_pagger.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.DownlodPagger">
 
 
@@ -36,7 +37,7 @@
         <TextView
             android:id="@+id/textTitle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:gravity="center|start"
