--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.MaintenanceActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -35,7 +36,7 @@
             android:id="@+id/textView42"
             style="@style/Theme.RemoteWebViewLight"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
@@ -177,6 +178,30 @@
                 tools:ignore="HardcodedText,RtlSymmetry" />
 
 
+            <TextView
+                android:id="@+id/textShowOnlineStatus"
+                style="@style/textColorStyle"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:layout_marginEnd="8dp"
+                android:clickable="true"
+                android:elegantTextHeight="true"
+                android:focusable="true"
+                android:foreground="?selectableItemBackground"
+                android:gravity="start|center"
+                android:maxLines="1"
+                android:paddingStart="65dp"
+                android:paddingLeft="24dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:text="Show Online Status"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toStartOf="@+id/imagEnableDownloadStatus"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textCheckDownloadStatus2"
+                tools:ignore="HardcodedText,RtlSymmetry" />
+
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/imagEnableDownloadStatus"
                 android:layout_width="wrap_content"
@@ -188,8 +213,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/divider39" />
 
 
-
-
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/imagShowOnlineStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:alpha="1"
+                app:layout_constraintBottom_toBottomOf="@+id/textShowOnlineStatus"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textCheckDownloadStatus2" />
 
             <ImageView
                 android:id="@+id/imageView4"
@@ -261,19 +293,6 @@
                 app:layout_constraintTop_toTopOf="@+id/textCrashPage"
                 app:srcCompat="@drawable/ic_crash_report" />
 
-     <!--       <ImageView
-                android:id="@+id/imageView20"
-                style="@style/imageStyleColorTint"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_marginStart="20dp"
-                app:layout_constraintBottom_toBottomOf="@+id/divider34"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider33"
-                app:srcCompat="@drawable/ic_settings_24" />
-
-            -->
-
             <ImageView
                 android:id="@+id/imageView33"
                 style="@style/imageStyleColorTint"
@@ -297,6 +316,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider39"
                 app:srcCompat="@drawable/ic_download_24" />
+
+            <ImageView
+                android:id="@+id/imageView23"
+                style="@style/imageStyleColorTint"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/textShowOnlineStatus"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/divider40"
+                app:srcCompat="@drawable/ic_show_online_status" />
 
             <View
                 android:id="@+id/divider32"
@@ -347,6 +377,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textCheckDownloadStatus2" />
+
+            <View
+                android:id="@+id/divider29"
+                style="@style/dividerBackColor"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_marginBottom="32dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textShowOnlineStatus"
+                app:layout_constraintVertical_bias="0.0" />
 
             <View
                 android:id="@+id/divider34"
