--- a/app/src/main/res/layout/activity_system_info_powell.xml
+++ b/app/src/main/res/layout/activity_system_info_powell.xml
@@ -6,6 +6,7 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.AdditionalSettingsActivity">
 
 
@@ -37,12 +38,13 @@
             android:id="@+id/textView42"
             style="@style/Theme.RemoteWebViewLight"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
             android:text="Hardware Information"
             android:textSize="18sp"
+            android:gravity="center|start"
             app:layout_constraintBottom_toBottomOf="@+id/close_bs"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/close_bs"
