--- a/app/src/main/res/layout/fragment_short_cut_bottom.xml
+++ b/app/src/main/res/layout/fragment_short_cut_bottom.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:padding="@dimen/_15dp"
     tools:context=".additionalSettings.ShortCutBottomFragment">
 
 
