--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="desc_padding">40dp</dimen>
     <dimen name="notif_title_size">20sp</dimen>
     <dimen name="_12sp">12sp</dimen>
+    <dimen name="_15dp">10sp</dimen>
 </resources>
