--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="@dimen/_15dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:id="@+id/linearLayout"
     android:layout_height="wrap_content">
 
