--- a/app/src/main/res/layout/activity_downlod_pagger.xml
+++ b/app/src/main/res/layout/activity_downlod_pagger.xml
@@ -171,7 +171,7 @@
                 android:layout_marginTop="8dp"
                 android:elegantTextHeight="true"
                 android:maxLines="1"
-                tools:text="/CLO/DE_MO_202100/App/Zip"
+                tools:text="/CLO/DE_MO_202100/App"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/imagePauseDownload"
