--- a/app/src/main/res/layout/webactivity_layout.xml
+++ b/app/src/main/res/layout/webactivity_layout.xml
@@ -190,7 +190,7 @@
         android:layout_gravity="top|center"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:alpha="0.6"
+        android:alpha="0.8"
         android:background="#171616"
         android:clickable="false"
         android:fitsSystemWindows="true"
@@ -417,7 +417,7 @@
                     android:layout_marginEnd="10dp"
                     android:elegantTextHeight="true"
                     android:gravity="center"
-                    android:text="NF : --"
+                    android:text=""
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:textStyle="bold"
@@ -437,7 +437,7 @@
                     android:layout_marginEnd="10dp"
                     android:elegantTextHeight="true"
                     android:gravity="center"
-                    android:text="CF : --"
+                    android:text=""
                     android:textColor="@color/white"
                     android:textSize="12sp"
                     android:textStyle="bold"
