April 18 - Api Download Page

--- a/app/src/main/res/layout/activity_download_the_apis.xml
+++ b/app/src/main/res/layout/activity_download_the_apis.xml
@@ -105,6 +105,8 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:visibility="invisible"
+        tools:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/action_bar_root"
         tools:ignore="HardcodedText" />
@@ -226,6 +228,22 @@
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textCsvStatus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:text="Checking..."
+        android:textSize="14sp"
+        android:visibility="visible"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerApiDownloads"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/action_bar_root"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
