--- a/app/src/main/res/layout/item_saved_download_rows.xml
+++ b/app/src/main/res/layout/item_saved_download_rows.xml
@@ -49,12 +49,13 @@
         app:layout_constraintTop_toBottomOf="@+id/filePath"/>
 
     <View
+        android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="4dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="40dp"
-        android:background="#E4DCDC"
+        android:background="#8BC34A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
